shelf: Back button shows up when entering tablet with left shelf.

Back button visibility was normally handled on shelf animation finish.
When switching from vertical shelf to tablet mode (force bottom shelf),
there is no animation, so the back button does not show up. This cl
handles that case.

Test: ash_unittests BackButtonTest.*
Bug: 831469
Change-Id: Ia95e791d30deb5a5c91599039c39094ffa29003b
Reviewed-on: https://chromium-review.googlesource.com/1008163
Commit-Queue: Sammie Quon <sammiequon@chromium.org>
Reviewed-by: Michael Wasserman <msw@chromium.org>
Cr-Commit-Position: refs/heads/master@{#550223}
Former-commit-id: b3a893d388a5f001fc83132aa7342552b9660f54